# wotnlclans

./: .dockerignore  .drone.yml  .gitignore  Cargo.toml  Dev-False.js  Dev-True.js  Dockerfile  README.md  buildAndRun.sh  checklang.js  community.json  config.json  createicons.js  go.mod  go.sum  main.go  nodemon.json  package-lock.json  package.json  serv.js
api/: api.go  calles.go  check.go  credentials.go  getIcons.go  routes.go  types.go
db/: blockedclans.json  clanData.go  clandata-all-index.json  clandata-all.json  clandata-firstload.json  clandata-load2.json  clandata-names.json  clans.json  config.json  db.go  dev.json  errors.go  extra.txt  extraAndBlocked.go  news.md  settings.go  sorting.go  sw_version.json  types.go  user.go
db/claninf/: 500019274-v1.json  500036952-v1.json  500040775-v1.json  500048472-v1.json  500050180-v1.json  500052371-v1.json  500056204-v1.json  500062265-v1.json  500069182-v1.json  500075440-v1.json
db/clanmedia/500019274/: claninf.json
db/clanreports/: clan-500010665.json  clan-500033877.json  clan-500052371.json  clan-500069182.json  player-503312278.json
discord/: commands.go  discord.go  events.go  parser.go
hint-report/https-mkopenga-com/: index.html
icons/: RADME.md
other/: buildWebStatic.go  config.go  dataTransforms.go  flags.go  other.go  print.go  service.go
server/: data.go  login.go  posts.go  server.go  settings.go  static.go
src/: main.rs
src/api/: api.rs  icons.rs  mod.rs  routes.rs  types.rs
src/db/: clan_data.rs  db.rs  errors.rs  extra_and_blocked.rs  mod.rs  sorting.rs  types.rs
src/discord/: commands.rs  events.rs  mod.rs  parser.rs
src/other/: mod.rs
src/web_server/: data.rs  mod.rs  posts.rs  statics.rs
update/: update.sh
web_static/: .babelrc  README.md  manifest.json  package-lock.json  package.json  webpack.config.js
web_static/dev/: index.html
web_static/dev/js/: index.js
www/: 404.html  api-c1.ejs  api.ejs  bottom.ejs  cache-polyfill.js  clandetails.ejs  index.ejs  manifest.json  mediatemplate.ejs  robots.txt  sw.js  swconf.js  top.ejs
www/css/: 404.css  404.sass  api.css  api.sass  home.css  home.sass  media.css  media.sass  nojs.css  nojs.sass  test.css  test.sass
www/js/: api.js  changeclandata.js  changeclandata.min.js  colorthief.js  script.js  script.min.js  tests.js
www/tests/: index.html
(+29 files in other folders)
