[package]
name = "wotnlclans"
version = "0.1.0"
authors = ["mjarkk <mkopenga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicli = "0.4"
structopt = "0.3.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-crypto = "0.2.36"
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.3.4", features = ["full"] }
lazy_static = "1.4.0"
futures = "0.3.8"
image = "0.23.12"
webp = "0.1.0"
actix-web = "3.2.0"
serenity = { version = "0.9.1", features = ["default_native_tls"] }
