[package]
name = "wotnlclans"
version = "0.1.0"
authors = ["mjarkk <mkopenga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicli = "0.4"
structopt = "0.3.21"
serde_json = "1.0"
rust-crypto = "0.2.36"
hyper = "0.13.9"
hyper-tls = "0.4.3"
lazy_static = "1.4.0"
futures = "0.3.8"
image = "0.23.12"
webp = "0.1.0"
actix-web = "3.3.2"
actix-cors = "0.5.3"
actix-service = "1.0.6"
actix-files = "0.5.0"
actix-rt = "1.1.1"
actix = "0.11.1"

[dependencies.serenity]
version = "0.9.3"
default-features = false
features = ["native_tls_backend", "builder", "cache", "collector", "client", "gateway", "http"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "0.2.23"
default-features = false
features = ["rt-core", "rt-threaded", "rt-util", "net", "blocking", "dns", "fs"]
